@@ -4,6 +4,10 @@ IN DEVELOPMENT
 
   INTERNALS:
 
+    * New -D option given before the command line turns on debugging output
+      for particular areas.  -Derror shows tracebacks on all errors.
+      (Martin Pool)
+
   BUG FIXES:
 
 
